recursion.logo.lessons.recursion.logo.koch.Koch.scala.error
Koch:12: error: not found: value level
  if (level==0){
      ^Koch:16: error: not found: value lenght
    snowSide(levels-1,lenght/3)
                      ^Koch:18: error: not found: value lenght
    snowSide(levels-1,lenght/3)
                      ^Koch:20: error: not found: value lenght
    snowSide(levels-1,lenght/3)
                      ^Koch:22: error: not found: value lenght
    snowSide(levels-1,lenght/3)
                      ^