recursion.logo.lessons.recursion.logo.koch.Koch.scala.code
def snowFlake (levels:Int, length:Double) {
    snowSide(levels, length);
    right(120);
    setColor(Color.blue);
    snowSide(levels, length);
    right(120);
    setColor(Color.orange);
    snowSide(levels, length);
    right(120);
}
def snowSide(levels:Int, length:Double) {
  if (level==0){
    avance(length)
  }
  else {
    snowSide(levels-1,lenght/3)
    gauche(60)
    snowSide(levels-1,lenght/3)
    droite(120)
    snowSide(levels-1,lenght/3)
    gauche(60)
    snowSide(levels-1,lenght/3)
  }
}